@@ -1,7 +1,6 @@
 package nl.ramsolutions.sw.magik.checks;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.checks.checks.CommentRegularExpressionCheck;
 import nl.ramsolutions.sw.magik.checks.checks.CommentedCodeCheck;
 import nl.ramsolutions.sw.magik.checks.checks.DuplicateMethodInFileCheck;
@@ -105,7 +104,7 @@ public final class CheckList {
     public static List<Class<?>> getDisabledByDefaultChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(DisabledByDefault.class) != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -115,7 +114,7 @@ public final class CheckList {
     public static List<Class<?>> getTemplatedChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(TemplatedMagikCheck.class) != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
