@@ -4,7 +4,6 @@ import com.sonar.sslr.api.AstNode;
 import java.net.URI;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
 import nl.ramsolutions.sw.magik.analysis.AstQuery;
 import nl.ramsolutions.sw.magik.analysis.Location;
@@ -67,7 +66,7 @@ public class TypeHierarchyProvider {
             Lsp4jConversion.positionFromLsp4j(position),
             MagikGrammar.IDENTIFIER);
         if (tokenNode == null) {
-            return null;
+            return null;  // NOSONAR: LSP4J requires null.
         }
 
         // Ensure it is on a class identifier, or a variable.
@@ -101,7 +100,7 @@ public class TypeHierarchyProvider {
             }
         }
 
-        return null;
+        return null;  // NOSONAR: LSP4J requires null.
     }
 
     /**
@@ -114,7 +113,7 @@ public class TypeHierarchyProvider {
         final TypeString typeString = TypeString.ofIdentifier(itemName, "sw");
         final AbstractType type = this.typeKeeper.getType(typeString);
         if (type == UndefinedType.INSTANCE) {
-            return null;
+            return null;  // NOSONAR: LSP4J requires null.
         }
 
         // Find children.
@@ -123,7 +122,7 @@ public class TypeHierarchyProvider {
             .filter(t -> t.getParents().contains(type))
             .map(this::toTypeHierarchyItem)
             .sorted(byName)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -136,14 +135,14 @@ public class TypeHierarchyProvider {
         final TypeString typeString = TypeString.ofIdentifier(itemName, "sw");
         final AbstractType type = this.typeKeeper.getType(typeString);
         if (type == UndefinedType.INSTANCE) {
-            return null;
+            return null;  // NOSONAR: LSP4J requires null.
         }
 
         final Comparator<TypeHierarchyItem> byName = Comparator.comparing(TypeHierarchyItem::getName);
         return type.getParents().stream()
             .map(this::toTypeHierarchyItem)
             .sorted(byName)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private TypeHierarchyItem toTypeHierarchyItem(final AbstractType type) {
