@@ -3,7 +3,6 @@ package nl.ramsolutions.sw.magik.analysis.helpers;
 import com.sonar.sslr.api.AstNode;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.api.MagikGrammar;
 import nl.ramsolutions.sw.magik.api.MagikOperator;
 import nl.ramsolutions.sw.magik.api.MagikPunctuator;
@@ -86,7 +85,7 @@ public class MethodInvocationNodeHelper {
 
         return argumentsNode.getChildren(MagikGrammar.ARGUMENT).stream()
             .map(AstNode::getFirstChild)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private boolean anyChildTokenIs(AstNode parentNode, MagikOperator magikOperator) {
