@@ -160,32 +160,23 @@ public class MagikIndexer {
     }
 
     private void handleDefinition(final MagikFile magikFile, final Definition definition) {
-        if (definition instanceof PackageDefinition) {
-            final PackageDefinition packageDefinition = (PackageDefinition) definition;
+        if (definition instanceof final PackageDefinition packageDefinition) {
             this.handleDefinition(magikFile, packageDefinition);
-        } else if (definition instanceof IndexedExemplarDefinition) {
-            final IndexedExemplarDefinition indexedExemplarDefinition = (IndexedExemplarDefinition) definition;
+        } else if (definition instanceof final IndexedExemplarDefinition indexedExemplarDefinition) {
             this.handleDefinition(magikFile, indexedExemplarDefinition);
-        } else if (definition instanceof EnumerationDefinition) {
-            final EnumerationDefinition enumerationDefinition = (EnumerationDefinition) definition;
+        } else if (definition instanceof final EnumerationDefinition enumerationDefinition) {
             this.handleDefinition(magikFile, enumerationDefinition);
-        } else if (definition instanceof SlottedExemplarDefinition) {
-            final SlottedExemplarDefinition slottedExemplarDefinition = (SlottedExemplarDefinition) definition;
+        } else if (definition instanceof final SlottedExemplarDefinition slottedExemplarDefinition) {
             this.handleDefinition(magikFile, slottedExemplarDefinition);
-        } else if (definition instanceof MixinDefinition) {
-            final MixinDefinition mixinDefinition = (MixinDefinition) definition;
+        } else if (definition instanceof final MixinDefinition mixinDefinition) {
             this.handleDefinition(magikFile, mixinDefinition);
-        } else if (definition instanceof MethodDefinition) {
-            final MethodDefinition methodDefinition = (MethodDefinition) definition;
+        } else if (definition instanceof final MethodDefinition methodDefinition) {
             this.handleDefinition(magikFile, methodDefinition);
-        } else if (definition instanceof GlobalDefinition) {
-            final GlobalDefinition globalDefinition = (GlobalDefinition) definition;
+        } else if (definition instanceof final GlobalDefinition globalDefinition) {
             this.handleDefinition(magikFile, globalDefinition);
-        } else if (definition instanceof BinaryOperatorDefinition) {
-            final BinaryOperatorDefinition binaryOperatorDefinition = (BinaryOperatorDefinition) definition;
+        } else if (definition instanceof final BinaryOperatorDefinition binaryOperatorDefinition) {
             this.handleDefinition(magikFile, binaryOperatorDefinition);
-        } else if (definition instanceof ConditionDefinition) {
-            final ConditionDefinition conditionDefinition = (ConditionDefinition) definition;
+        } else if (definition instanceof final ConditionDefinition conditionDefinition) {
             this.handleDefinition(magikFile, conditionDefinition);
         }
     }
@@ -335,7 +326,7 @@ public class MagikIndexer {
                     MagikIndexer.PARAMETER_MODIFIER_MAPPING.get(paramModifier);
                 return new Parameter(name, modifier, parameterTypeString);
             })
-            .collect(Collectors.toList());
+            .toList();
         final ParameterDefinition assignParamDef = definition.getAssignmentParameter();
         final Parameter assignmentParameter = assignParamDef != null
             ? new Parameter(
@@ -608,8 +599,7 @@ public class MagikIndexer {
         final AbstractType type = this.typeKeeper.getType(typeString);
         if (type == UndefinedType.INSTANCE) {
             return new MagikType(this.typeKeeper, sort, typeString);
-        } else if (type instanceof MagikType) {
-            final MagikType magikType = (MagikType) type;
+        } else if (type instanceof final MagikType magikType) {
             if (sort != MagikType.Sort.UNDEFINED  // If target sort is UNDEFINED, we don't care.
                 && magikType.getSort() != MagikType.Sort.UNDEFINED  // Otherwise ensure it isn't overwritten.
                 && magikType.getSort() != sort) {
@@ -618,9 +608,8 @@ public class MagikIndexer {
 
             magikType.setSort(sort);
             return magikType;
-        } else if (type instanceof AliasType) {
+        } else if (type instanceof final AliasType aliasType) {
             // Get alias and return it.
-            final AliasType aliasType = (AliasType) type;
             final AbstractType aliasedType = aliasType.getAliasedType();
             if (aliasedType instanceof MagikType) {
                 final TypeString aliasedTypeString = aliasedType.getTypeString();
